add ability to send commands via api
